--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # github_username: trmcdade
 # linkedin_username: timothymcdade
 
-# google_analytics: G-EWMFHWFW20
+google_analytics: G-3MVMRG3705
 
 og_image: /assets/images/portrait_web.jpg
 
