--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,9 @@ author:
   name: Mateo Villamizar Chaparro
   email: sv161@duke.edu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Political Science PhD candidate at Duke University. Ex UCSD and Universidad de los Andes.
+  Political Science PhD candidate at Duke University. MIA from UC San Diego and MA Universidad de los Andes. Undergraduate studies in Economics and Political Science at Universidad de los Andes.
 
 show_excerpts: false # set to true to show excerpts on the homepage
-
-# social_links:
-# twitter_username: sanmavicha
-# github_username: trmcdade
-# linkedin_username: timothymcdade
 
 google_analytics: G-3MVMRG3705
 
