--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ og_image: /assets/images/VillamizarChaparro_NoPort.jpg
 header_pages:
   - bio.md
   - publications.md
-  - skills.md
+  - dissertation.md
   - teaching.md
   - cv.md
   - github.md
