update pubs and footnote

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ author:
   name: Mateo Villamizar Chaparro
   email: sv161@duke.edu
 description: > # this means to ignore newlines until "show_excerpts:"
-  Political Science PhD candidate at Duke University. MIA from UC San Diego and MA Universidad de los Andes. Undergraduate studies in Economics and Political Science at Universidad de los Andes.
+  Assistant Professor at Universidad Católica de Uruguay. PhD in Political Science from Duke University. MIA from UC San Diego and MA Universidad de los Andes. Undergraduate studies in Economics and Political Science at Universidad de los Andes.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
