--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ title: Mateo Villamizar Chaparro
 tagline: Santiago Mateo Villamizar Chaparro is a political scientist.
 author:
   name: Mateo Villamizar Chaparro
-  email: sv161@duke.edu
+  email: santiago.villamizar@ucu.edu.uy
 description: > # this means to ignore newlines until "show_excerpts:"
-  Assistant Professor at Universidad Católica de Uruguay. PhD in Political Science from Duke University. MIA from UC San Diego and MA Universidad de los Andes. Undergraduate studies in Economics and Political Science at Universidad de los Andes.
+  Assistant Professor at Universidad Católica de Uruguay. PhD in Political Science from Duke University. MIA from UC San Diego and MA Universidad de los Andes. BA in Economics and Political Science at Universidad de los Andes.
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
